# Remote_Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  all.txt  client.html  main.cpp  package-lock.json  start_all.bat
RemoteControl/: Chon  setup.bat
RemoteControl/captured_data/: rec_1765212802700.webm
registry_server/: agents.js  discovery.js  package-lock.json  package.json  server.js
src/: main.cpp  test  test.cpp
src/core/: CommandDispatcher.hpp  RegistryClient.cpp  RegistryClient.hpp  WebSocketServer.cpp  WebSocketServer.hpp
src/interfaces/: IRemoteModule.hpp
src/modules/: AppManager.hpp  AppManager_linux.cpp  AppManager_win.cpp  AppManger_linux.cpp  EdgeManager.hpp  EdgeManager_linux.cpp  EdgeManager_win.cpp  FileManager.hpp  FileManager_linux.cpp  FileManager_win.cpp  InputManager.hpp  InputManager_linux.cpp  InputManager_win.cpp  KeyManager.hpp  KeyManager_linux.cpp  KeyManager_win.cpp  ProcessManager.hpp  ProcessManager_linux.cpp  ProcessManager_win.cpp  ScreenManager.hpp  ScreenManager_linux.cpp  ScreenManager_win.cpp  SystemManager.hpp  SystemManager_linux.cpp  SystemManager_win.cpp  WebcamManager.hpp  WebcamManager_linux.cpp  WebcamManager_win.cpp  encryption_utils.hpp
src/utils/: SystemUtils.cpp  SystemUtils.hpp
web-client/: README.md  angular.json  package-lock.json  package.json
web-client/components/webcam/: webcam.css  webcam.html
web-client/src/: index.html  main.ts  styles.css
web-client/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts  root.ts
web-client/src/app/components/sidebar/: sidebar.component.css  sidebar.component.html  sidebar.component.ts
web-client/src/app/components/topbar/: topbar.component.css  topbar.component.html  topbar.component.ts
web-client/src/app/components/webcam/: webcam.css  webcam.html  webcam.ts
web-client/src/app/models/: agent.ts
web-client/src/app/pages/about/: about.css  about.html  about.ts
web-client/src/app/pages/agent-detail/: agent-detail.css  agent-detail.html  agent-detail.ts
web-client/src/app/pages/agents/: agents.css  agents.html  agents.ts
web-client/src/app/services/: agent.service.ts  websocket.service.ts
